<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
         android:id="@+id/dashboard"
        android:title="@string/dashboard"
        android:icon="@drawable/ic_dashboard"/>

    <item
        android:id="@+id/college"
        android:title="@string/college"
        android:icon="@drawable/ic_college"/>

    <item
        android:id="@+id/branch"
        android:title="@string/hello_branch_fragment"
        android:icon="@drawable/ic_branch"/>

    <item
        android:id="@+id/help"
        android:title="@string/help"
        android:icon="@drawable/ic_help"/>

    <item
        android:id="@+id/about"
        android:title="@string/about"
        android:icon="@drawable/ic_about"/>

</menu>